[java] cleanup Groovy-isms in tests (IDEA-331682)
GitOrigin-RevId: 4129d22380b4b6508dcd932ac81ae5feb947ff7d